<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/userImage"
        />


    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_rectangle"
        android:text="@string/signin"
        android:textSize="16dp" />


    <Button
        android:id="@+id/image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_rectangle"
        android:text="@string/upload_image"
        android:textSize="16dp" />

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_rectangle"
        android:text="@string/verify"
        android:textSize="16dp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_rectangle"
        android:text="@string/logout"
        android:textSize="16dp" />


</LinearLayout>